fix everything so it all works nicely with jpackage